# emurgo-haskell-project

./: CHANGELOG.md  emurgo-haskell-project.cabal
app/: Main.hs
lib/: Account.hs  Generics.hs  Menus.hs  Renderer.hs  Sifo.hs
lib/menus/: Entry.hs  Menu.hs  Render.hs
lib/rendering/: Entry.hs  Menu.hs  Navigation.hs  Scene.hs
lib/simulations/: Account.hs  Book.hs  Contract.hs  Inspection.hs  Market.hs  Sifo.hs  Simulation.hs  Trade.hs
lib/structure/: Account.hs  Asset.hs  BTC-USD.csv  Book.hs  Contract.hs  Market.hs  Simulation.hs  Ticker.hs  Trade.hs
