cabal-version:      3.8
name:               emurgo-haskell-project
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             luk-rs
maintainer:         santos8@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:  MyLib

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.17.2.0
  hs-source-dirs:   lib
  default-language: Haskell2010

executable emurgo-haskell-project
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                    ^>=4.17.2.0
    , emurgo-haskell-project

  hs-source-dirs:   app
  default-language: Haskell2010

-- test-suite emurgo-haskell-project-test
--   default-language: Haskell2010
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   test
--   main-is:          MyLibTest.hs
--   build-depends:    base ^>=4.17.2.0
