cabal-version:      3.8
name:               emurgo-haskell-project
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             luk-rs
maintainer:         santos8@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Menus
    Renderer
    Sifo

  -- Modules included in this library but not exported.
  other-modules:
    Account
    Book
    Entry
    Generics
    Market
    Menu
    Navigation
    Simulation

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base        ^>=4.17.2.0
    , containers
    , mtl
    , random

  hs-source-dirs:   lib lib/menus lib/simulations

  --lib/menus
  default-language: Haskell2010

executable emurgo-haskell-project
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                    ^>=4.17.2.0
    , emurgo-haskell-project
    , mtl

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite emurgo-haskell-project-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base ^>=4.17.2.0
